--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SESSION_ID=
 
-Postress(Get one for free from neon.tech/supabase/render...will fallback to path: ./gift/database/database.db if not provided
+# Postress(Get one for free from neon.tech/supabase/render)...will fallback to path: ./gift/database/database.db if not provided
 DATABASE_URL=
